# ssr-native-rs

./: Cargo.toml  README.md  README_CN.md  README_EN.md  build-cross.sh
src/: base64.rs  buffer.rs  cache.rs  config.rs  crc32.rs  dns.rs  error.rs  lib.rs  log.rs  ppbloom.rs  qr_code.rs  tls.rs  tunnel.rs  udp.rs  utils.rs  websocket.rs
src/crypto/: aead.rs  cipher_names.rs  hkdf.rs  key_derive.rs  mod.rs  stream.rs
src/obfs/: auth.rs  auth_chain.rs  http_simple.rs  mod.rs  obfs.rs  obfsutil.rs  tls1_2_ticket.rs  verify.rs
src/protocol/: mod.rs  ssr_executive.rs
src/socks5/: addr.rs  mod.rs  packet.rs  s5.rs
